# intellm

./: .envrc  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  flake.nix
llamacpp-intel-arc/: .gitignore  CLAUDE.md  flake.nix
llamacpp-intel-arc/build-aicss/: README.md  aicss-fork-merge-fixes.patch
llamacpp-intel-arc/configs/models/: qwen3.6-35b-a3b-q4km.yaml
llamacpp-intel-arc/configs/prompts/: kl_test_set.txt  long_corpus.txt  long_corpus_1024tok.txt  long_corpus_256tok.txt  long_corpus_4096tok.txt
llamacpp-intel-arc/harness/: build_long_prompts.py  capture_logprobs.py  compute_kl.py
llamacpp-intel-arc/pkgs/server/: default.nix
llamacpp-intel-arc/results/kl-long-20260426/: SUMMARY.md
llamacpp-intel-arc/results/kl-mvp-20260425/: SUMMARY.md  kl-fp16-vs-q4_0.json  kl-fp16-vs-q8_0.json
llamacpp-intel-arc/results/profile-20260425-233958/: SUMMARY.md  engine-stats.txt
llamacpp-intel-arc/results/profile-aicss-20260426-002625/: SUMMARY.md  engine-stats.txt
llamacpp-intel-arc/scripts/: build-aicss.sh  profile-decode.sh  pull-container.sh  pull-model.sh  run-benchmark.sh  run-server-aicss.sh  run-server.sh
nix-intel-xpu/: CLAUDE.md  flake.nix
nix-intel-xpu/pkgs/oneapi-env/: default.nix
nix-intel-xpu/pkgs/sycl-tla/: default.nix
nix-intel-xpu/pkgs/vllm-xpu-kernels/: default.nix
nix-intel-xpu/tests/: smoke-test.sh
nix/auto-round/: Containerfile  auto-round-qwen-3-6-35b-a3b.sh  autoround.sh
scripts/: kl_eval.py  quantize.sh
spec-gdn-investigation/: README.md
spec-gdn-investigation/e2e/: RESULTS.md  baseline.json  run_bench.sh  serve_baseline.sh  serve_common.sh  serve_spec.sh  spec.json
vllm-intel-arc/: .gitignore  CLAUDE.md  flake.nix
vllm-intel-arc/benchmarks/: compare_results.py  run_benchmarks.py
vllm-intel-arc/benchmarks/quality/: capture_logprobs.py  compare_decodes.py  compare_kl.py  compute_kl.py  decode_kl.py  decode_quality.py
vllm-intel-arc/configs/models/: llama-3.1-8b.yaml  qwen2.5-7b-quality-eval.yaml  qwen2.5-7b.yaml
vllm-intel-arc/container/: Containerfile.xpu-int4-tq  Dockerfile
vllm-intel-arc/docs/: RUN-ON-B70.md
vllm-intel-arc/results/profile-20260425-232306/: SUMMARY.md  engine-stats.txt
vllm-intel-arc/scripts/: full-baseline.sh  profile-decode.sh  pull-container.sh  run-benchmark.sh  run-quality-eval.sh  run-server-xpu-int4.sh  run-server.sh  summarize-metrics.sh  summarize-profile.py
whispercpp-intel-arc/: CLAUDE.md
whispercpp-intel-arc/scripts/: build-aicss.sh
xpu-flash-attention/: CLAUDE.md  CMakeLists.txt  flake.nix
xpu-flash-attention/benchmarks/: CMakeLists.txt  bench_against_baseline.py  bench_flash_attn.cpp
xpu-flash-attention/results/: v1_baseline.md  xmx_investigation.md
xpu-flash-attention/scripts/: in-container.sh  probe_matrix.cpp
xpu-flash-attention/src/bindings/: CMakeLists.txt  flash_attn_module.cpp
xpu-flash-attention/src/kernels/: flash_attention_xe2.hpp  flash_attention_xmx.hpp
xpu-flash-attention/tests/: CMakeLists.txt  test_correctness.cpp  test_flash_attn.py
xpu-kvcache-quant/: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  flake.nix
xpu-kvcache-quant/benchmarks/: CMakeLists.txt  bench_quantize.cpp  bench_rotation.cpp
xpu-kvcache-quant/harness/: capture_logprobs_vllm.py
xpu-kvcache-quant/notes/: CONTINUE.md  phase-a-result.md  phase-a5-result.md  phase-c-result.md  phase-d-result.md
xpu-kvcache-quant/results/phase-c/: kl_long1k_k3v4_nc.json  kl_long1k_k8v4.json  kl_long4k_k3v4_nc.json  kl_long4k_k8v4.json  kl_short_k3v4_nc.json  kl_short_k8v4.json  long1k_fp16.json  long1k_k3v4_nc.json  long1k_k8v4.json  long4k_fp16.json  long4k_k3v4_nc.json  long4k_k8v4.json
xpu-kvcache-quant/results/phase-d/: kl_short_k8v4.json
xpu-kvcache-quant/src/bindings/: CMakeLists.txt  kvcache_quant_module.cpp
xpu-kvcache-quant/src/common/: quantize.hpp
xpu-kvcache-quant/src/rotorquant/kernels/: clifford_rotor.hpp  iso_quant.hpp  planar_quant.hpp
xpu-kvcache-quant/src/turboquant/kernels/: lloyd_max.hpp  qjl.hpp  walsh_hadamard.hpp
xpu-kvcache-quant/tests/: CMakeLists.txt  test_quantize.cpp  test_rotors.cpp  test_wht.cpp
xpu-kvcache-quant/vllm_adapter/: __init__.py  monkey_patch.py
